# padic-fractal-analysis

./: .gitignore  ALGORITHMS.md  BUG_FIXES.md  CHISTYAKOV_ALGORITHM_REFERENCE.md  CLAUDE.md  FIX_READY.txt  IMPLEMENTATION_SUMMARY.md  IMPLEMENTATION_VS_PAPER_COMPARISON.md  JEZERO_VALIDATION_PLAN.md  MARS_2020_VALIDATION_RESULTS.md  MARS_SAMPLES_INTERPRETATION.txt  MARS_SAMPLES_VALIDATION.md  PADIC_VISUALIZATION_WORKFLOW.md  PERPIXEL_ANALYSIS_GUIDE.md  PHASE_3_EXTENSION_ANALYSIS.md  PHASE_3_VALIDATION_COMPLETE.md  PHASE_4_PERPIXEL_PADIC_METHODS.md  PHASE_4_ULTRAMETRIC_INDEX.md  PHASE_4_ULTRAMETRIC_QUICK_FIX.md  PROJECT_SUMMARY.md  QUADTREE_BUG_FIX.md  QUICK_REFERENCE.md  QUICK_START.txt  README.md  README_VISUALIZATION.md  REAL_DATA_ANALYSIS_FIX.md  REBUILD_QUADTREE.txt  SIGN_CORRECTION_FINDINGS.md  STATUS.md  ULTRAMETRIC_CODE_COMPARISON.md  ULTRAMETRIC_REVISED_FIX.md  VALIDATION_GUIDE.md  create_mars2020_samples.py  environment.yml  mars2020_samples_summary.csv  mars2020_samples_volume4.gpkg  pyproject.toml  requirements.txt  research_plan.md  test_embedding_fix.py  (+1 more)
cache/: fractal_metrics.json  fractal_self_similarity_results.json  fractality_analysis_report.txt
data/: mars_2020_terrain_relative_navigation_ctx_dtm_mosaic.xml
docs/archive/: BUG_REPORT_FRACTAL_DENSITY.md  CURRENT_STATUS.txt  ENVIRONMENT_SETUP.md  INDEX.md  (+20 more)
notebooks/: 01_synthetic_terrain_validation.ipynb  02_mars_dem_analysis.ipynb  03_mars_samples_validation.ipynb  04_per_pixel_padic_methods.ipynb  05_padic_visualization.ipynb  06_quadtree_build_inspect_visualize.ipynb  07_mnist_padic_visualization.ipynb  08_padic_terrain_visualization.ipynb  09_padic_terrain_complexity.ipynb  10_enhanced_padic_visualization.ipynb  11_chistyakov_parameter_validation.ipynb  12_mnist_padic_figure4_corrected.ipynb  13_terrain_padic_visualization.ipynb  14_fractal_properties_analysis.ipynb  15_scale_dependence_study.ipynb  16_regional_comparison.ipynb  17_fractality_patterns.ipynb  19_figure4_paper_reproduction.ipynb  20_debug_coordinate_mapping.ipynb  20_figure4_definitive.ipynb  README.md
scripts/: 00_run_all.sh  01_build_and_save_quadtree.py  02_inspect_quadtree.py  03_visualize_quadtree.py  compare_padic_terrain_regions.py  compare_tree_vs_interleave.py  debug_coord_mapping.py  fractal_self_similarity_analysis.py  fractality_hillshade_overlay.py  fractality_hillshade_with_samples.py  full_resolution_padic_density.py  full_resolution_padic_visualization.py  local_sierpinski_self_similarity.py  padic_3d_density.py  perpixel_fractal_maps.py  sierpinski_2d_spatial_fractality.py  sierpinski_2d_spatial_fractality_optimized.py  sierpinski_2d_spatial_fractality_sampled.py  sierpinski_location_based_fractality.py  sierpinski_terrain_fractality_corrected.py  test_hierarchical_tree_encoding.py  visualize_perpixel_maps.py
tests/: __init__.py  run_validation.py  test_mars_validation.py  test_synthetic_validation.py
(+12 files in other folders)
