[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "padic_fractal_analysis"
version = "0.1.0"
description = "P-adic fractal analysis for Mars rover targeting: A hierarchical terrain complexity framework"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Research Team", email = "research@example.com"}
]
requires-python = ">=3.8"
keywords = [
    "p-adic",
    "fractal-analysis",
    "terrain-analysis",
    "mars-exploration",
    "geospatial",
    "ultrametric",
    "hierarchical-clustering",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: GIS",
]

dependencies = [
    "numpy>=1.21.0",
    "scipy>=1.7.0",
    "scikit-image>=0.18.0",
    "scikit-learn>=1.0.0",
    "rasterio>=1.2.0",
    "geopandas>=0.10.0",
    "gdal>=3.4.0",
    "rasterio>=1.2.0",
    "pywavelets>=1.2.0",
    "matplotlib>=3.4.0",
    "jupyter>=1.0.0",
    "jupyterlab>=3.0.0",
    "numba>=0.55.0",
    "h5py>=3.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=22.0.0",
    "isort>=5.10.0",
    "flake8>=4.0.0",
    "mypy>=0.950",
    "sphinx>=4.5.0",
    "sphinx-rtd-theme>=1.0.0",
]
gpu = [
    "cupy>=11.0.0",
    "pytorch>=1.10.0",
]
viz = [
    "plotly>=5.0.0",
    "pyvista>=0.36.0",
    "folium>=0.12.0",
]

[project.urls]
"Homepage" = "https://github.com/example/padic_fractal_analysis"
"Documentation" = "https://padic-fractal-analysis.readthedocs.io"
"Repository" = "https://github.com/example/padic_fractal_analysis.git"
"Issue Tracker" = "https://github.com/example/padic_fractal_analysis/issues"

[tool.setuptools]
packages = ["padic"]

[tool.setuptools.package-data]
padic = ["data/*.json", "data/*.yaml"]

[tool.black]
line-length = 100
target-version = ["py38", "py39", "py310", "py311"]
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 100
skip_glob = ["*/migrations/*"]

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
addopts = "-v --cov=padic --cov-report=html --cov-report=term"

[tool.coverage.run]
source = ["padic"]
omit = [
    "*/tests/*",
    "*/test_*.py",
    "*/__main__.py",
]
